# busybeaver

./: 3370.txt  6006.txt  BuK_Abgabe.txt  CMakeLists.txt  TM.txt  TM2.txt  currentBestBusyBeaver.txt  main.cpp
Training/: BlockingQueue.h  Bootcamp.cpp  Bootcamp.h
TuringMachine/: BaseTuringMachine.cpp  BaseTuringMachine.h  BusyBeaver.cpp  BusyBeaver.h  TuringMachine.cpp  TuringMachine.h
